--- a/healthy-app/package.json
+++ b/healthy-app/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
